# ixora-rag

./: README.md  docker-compose.yaml  package-lock.json  todo.txt
backend/: .env  .gitignore  Django RAG API.postman_collection.json  README.md  chenk.txt  manage.py  new_requrments.txt  promts_list.txt  pyproject.toml  pytest.ini  rag_local_demo.py  requirments.txt  temp_test.py  test.json  todo.txt  utils.py
backend/api/: admin.py  models.py  serializers.py  test_API(methods).md  test_API.md  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_team_customers.py
backend/project_management/: admin.py  models.py  permissions.py  serializers.py  test_API(methods).md  test_API.md  urls.py  views.py  views_rag.py
backend/project_management/migrations/: 0001_initial.py  0002_documentembedding.py  0003_alter_documentembedding_embedding.py  0004_remove_documentembedding_created_at.py  0005_documentembedding_customer_documentembedding_tag.py  0006_remove_documentembedding_updated_at_and_more.py  0007_alter_documentembedding_created_at.py  0008_documentembedding_chunk_text.py  0009_alter_documentembedding_document.py  0010_documentembedding_page_number_and_more.py  0011_querylog.py  0012_usercustomerassignment_delete_usertagassignment.py  0013_alter_usercustomerassignment_role.py  0014_alter_usercustomerassignment_unique_together_and_more.py  (+1 more)
backend/rag_pipeline/: PROMPT.py  Untitled-1.json  app.py  embedder.py  fake_llm.py  llm.py  loader.py  pipline.py  retriever.py  splitter.py  utility.py
backend/ragbackend/: asgi.py  settings.py  urls.py  wsgi.py
(+19 files in other folders)
